--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
     <meta charset="utf-8" />
     <title>/ Natalia oviedo </title>
     <link href="style.css" rel="stylesheet" type="text/css">
-    <link rel="icon" href="img/png/flor.png" type="image/x-icon">
+    <link rel="icon" href="img/SVG/corazon.ico" type="image/x-icon">
 </head>
 
 <body>
     <header>
-        <h1> / Nat </h1>
         <nav>
             <ul class="botones">
                 <li><a href="#sobre-mi"> Sobre mi</a></li>
@@ -22,43 +21,60 @@
     <main>
         <section class="inicio">
             <img class="baner" src="./img/banner.jpg">
-            <div class="mi-nombre">
-                <img class="flor-img" src="./img/png/flor2.png" alt="flor">
-                <p>Natalia Oviedo</p>
+            <div>
+                <p>Hola!</p>
             </div>
         </section>
         <section id="sobre-mi">
-            <div class="presentacion">
-                <h2>Sobre mi</h2>
-                <p>¡Hola! Soy Natalia, actualmente me encuentro cursando la carrera de diseño y comunicación visual,
-                    empezando mi cuarto año de carreran en la Universidad Nacional de Lanús. Esta es mi primera página
-                    web , así que ¡bienvenidxs!, particularmente siempre estoy buscando nuevas formas de aprendizaje
-                    y evolución en cada proyecto que realizo. Espero que les sea placentero el recorrido y en mis
-                    proyectos hay más para que puedan apreciar. Saluditos
-                </p>
+            <div class="caja-presentacion">
+                <div>
+                    <h2>Sobre <br /> mi</h2>
+                    <img src="./img/png/corazon-tit.png">
+                </div>
+                <article>
+                    <p>¡Hola! Soy Natalia Oviedo, aunque me pueden decir Natii, Natu o Nat, como prefieran. Soy de
+                        Acuario, amante de los viajes y de crear cosas lindas. Actualmente, estoy cursando la carrera de
+                        Diseño y Comunicación Visual, comenzando mi cuarto año en la Universidad Nacional de Lanús.
+                        Esta es mi primera página web, así que ¡bienvenidos! Espero que disfruten del recorrido y los
+                        invito a explorar mis proyectos para conocer más sobre mi trabajo. ¡Gracias por visitarme!
+                    </p>
+                </article>
             </div>
-            <div class="informacion">
-                <div class="info">
+        </section>
+        <section id="datos">
+            <div class="informacion-personal">
+                <div>
                     <h2>Educación </h2>
                     <p>UNLA/ Licenciatura el diseño y comunicacion visual (2020- actualidad)</p>
                     <p>Curso diseño ux/ui (cursando actualmente)</p>
                 </div>
-                <div class="info">
-                    <h2>Dominio de herramientas</h2>
-                    <ul>
-                        <li>Adobe ilustrator</li>
-                        <li>Adobe Photoshop</li>
-                        <li>Adobe indesign</li>
-                        <li>Figma</li>
-                    </ul>
+                <div>
+                    <h2>Idiomas</h2>
+                    <p>Español: Nativo <br />
+                        Ingles : Nivel básico <br />
+                        Portugués: Nivel medio<br />
+                    </p>
                 </div>
             </div>
+            <div class="otros-datos">
+                <div>
+                    <h3>Experiencia</h3>
+                    <p>fsgdfgdfgdfg</p>
+                </div>
+            <div>
+                <h3>Dominio de herramientas</h3>
+                <img src=" ./img/Logos-habilidades/ilustrador.png" alt="Ilustrator">
+                <img src="./img/Logos-habilidades/photoshop.png" alt="Photoshop">
+                <img src="./img/Logos-habilidades/indesign.png" alt="Indesigne">
+                <img src="./img/Logos-habilidades/figma.png" alt="Figma">
+            </div>
+        </div>
         </section>
         <section id="mis-proyectos">
-            <h2> Mis proyectos</h2>
+            <h3> Mis proyectos</h3>
             <div class="image">
                 <div class="proyectos-img">
-                    <h4>Afiches</h4>
+                    <h3>Afiches</h3>
                     <a href="https://www.behance.net/gallery/155726021/Afiche-social-Diseno-II" target="_blank">
                         <img src="./img/afichesocial1.jpg" alt="Afiche social" width="250px" height="300px">
                     </a>
@@ -68,27 +84,29 @@
                     </a>
                 </div>
                 <div class="proyectos-img">
-                    <h4>Editorial</h4>
+                    <h3>Editorial</h3>
                     <a href="https://www.behance.net/gallery/184190355/Diseno-editorial-Catalogo-de-artista"
                         target="_blank">
-                        <img src="./img/editorial1.jpg" alt="editorial Catálogo de Artista" width="350px" height="300px">
+                        <img src="./img/editorial1.jpg" alt="editorial Catálogo de Artista" width="350px"
+                            height="300px">
                     </a>
                     <a href="https://www.behance.net/gallery/184314865/Infografia-Mate-elctrico" target="_blank">
                         <img src="./img/infografia1.jpg" alt="Diseño de información" width="300px" height="300px">
                     </a>
                 </div>
                 <div class="proyectos-img">
-                    <h4>Identidad visual</h4>
+                    <h3>Identidad visual</h3>
                     <a href="https://www.behance.net/gallery/182412071/Rediseno-de-marca-Taller-de-diseno-III-UNLa"
                         target="_blank">
-                        <img src="./img/identidad visual.jpg" alt="Re-diseño de identidad visual" width="300px" height="250px">
+                        <img src="./img/identidad visual.jpg" alt="Re-diseño de identidad visual" width="300px"
+                            height="250px">
                     </a>
                     <a href="https://www.behance.net/gallery/191837071/Sistema-y-Diseno-de-latas" target="_blank">
                         <img src="./img/identidad2.jpg" alt="Identidad Visual" width="400x" height="400px">
                     </a>
                 </div>
                 <div class="proyectos-img">
-                    <h4>Fotografía</h4>
+                    <h3>Fotografía</h3>
                     <a href="https://www.behance.net/gallery/153431609/Composicion-fotografica-en-sistema-UNLA"
                         target="_blank">
                         <img src="./img/fotografia1.jpg" alt="Composición" width="300px" height="250px">
@@ -99,21 +117,19 @@
         </section>
     </main>
     <footer>
-        <section id="contacto">
-            <div class="redes-1 ">
-                <h2>Mis Redes</h2>
-                <ul class="botones-redes">
-                    <li><a href="https://www.instagram.com/natiioviedo22/" target="_blank">Instagram</a></li>
-                    <li><a href="https://www.behance.net/nataliaoviedo3" target="_blank">Mi Behance</a></li>
-                    <li><a href="https://www.linkedin.com/in/natalia-oviedo-7906b7275/" target="_blank">Linkedin</a>
-                    </li>
-                </ul>
-            </div>
-            <div class="copy">
-                <h6>Todos los derechos reservados</h6>
-                <h6>Copyright © 2023 Natalia</h6>
-            </div>
-        </section>
+        <div id="contacto">
+            <h2>Mis Redes</h2>
+            <ul class="botones-redes">
+                <li><a href="https://www.instagram.com/natiioviedo22/" target="_blank">Instagram</a></li>
+                <li><a href="https://www.behance.net/nataliaoviedo3" target="_blank">Mi Behance</a></li>
+                <li><a href="https://www.linkedin.com/in/natalia-oviedo-7906b7275/" target="_blank">Linkedin</a>
+                </li>
+            </ul>
+        </div>
+        <div class="copy">
+            <h6>Todos los derechos reservados</h6>
+            <h6>Copyright © 2023 Natalia</h6>
+        </div>
     </footer>
 </body>
 
