--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
         <section id="datos">
             <div class="informacion-personal">
                 <div>
-                    <h2>Educación </h2>
+                    <h3>Educación </h3>
                     <p>UNLA/ Licenciatura el diseño y comunicacion visual (2020- actualidad)</p>
                     <p>Curso diseño ux/ui (cursando actualmente)</p>
                 </div>
                 <div>
-                    <h2>Idiomas</h2>
+                    <h3>Idiomas</h3>
                     <p>Español: Nativo <br />
                         Ingles : Nivel básico <br />
                         Portugués: Nivel medio<br />
@@ -61,17 +61,17 @@
                     <h3>Experiencia</h3>
                     <p>fsgdfgdfgdfg</p>
                 </div>
-            <div>
-                <h3>Dominio de herramientas</h3>
-                <img src=" ./img/Logos-habilidades/ilustrador.png" alt="Ilustrator">
-                <img src="./img/Logos-habilidades/photoshop.png" alt="Photoshop">
-                <img src="./img/Logos-habilidades/indesign.png" alt="Indesigne">
-                <img src="./img/Logos-habilidades/figma.png" alt="Figma">
+                <div>
+                    <h3>Dominio de herramientas</h3>
+                    <img src=" ./img/Logos-habilidades/ilustrador.png" alt="Ilustrator">
+                    <img src="./img/Logos-habilidades/photoshop.png" alt="Photoshop">
+                    <img src="./img/Logos-habilidades/indesign.png" alt="Indesigne">
+                    <img src="./img/Logos-habilidades/figma.png" alt="Figma">
+                </div>
             </div>
-        </div>
         </section>
         <section id="mis-proyectos">
-            <h3> Mis proyectos</h3>
+            <h2> Mis proyectos</h2>
             <div class="image">
                 <div class="proyectos-img">
                     <h3>Afiches</h3>
@@ -84,7 +84,7 @@
                     </a>
                 </div>
                 <div class="proyectos-img">
-                    <h3>Editorial</h3>
+                    <h2>Editorial</h2>
                     <a href="https://www.behance.net/gallery/184190355/Diseno-editorial-Catalogo-de-artista"
                         target="_blank">
                         <img src="./img/editorial1.jpg" alt="editorial Catálogo de Artista" width="350px"
@@ -95,7 +95,7 @@
                     </a>
                 </div>
                 <div class="proyectos-img">
-                    <h3>Identidad visual</h3>
+                    <h2>Identidad visual</h2>
                     <a href="https://www.behance.net/gallery/182412071/Rediseno-de-marca-Taller-de-diseno-III-UNLa"
                         target="_blank">
                         <img src="./img/identidad visual.jpg" alt="Re-diseño de identidad visual" width="300px"
@@ -106,7 +106,7 @@
                     </a>
                 </div>
                 <div class="proyectos-img">
-                    <h3>Fotografía</h3>
+                    <h2>Fotografía</h2>
                     <a href="https://www.behance.net/gallery/153431609/Composicion-fotografica-en-sistema-UNLA"
                         target="_blank">
                         <img src="./img/fotografia1.jpg" alt="Composición" width="300px" height="250px">
@@ -122,8 +122,7 @@
             <ul class="botones-redes">
                 <li><a href="https://www.instagram.com/natiioviedo22/" target="_blank">Instagram</a></li>
                 <li><a href="https://www.behance.net/nataliaoviedo3" target="_blank">Mi Behance</a></li>
-                <li><a href="https://www.linkedin.com/in/natalia-oviedo-7906b7275/" target="_blank">Linkedin</a>
-                </li>
+                <li><a href="https://www.linkedin.com/in/natalia-oviedo-7906b7275/" target="_blank">Linkedin</a> </li>
             </ul>
         </div>
         <div class="copy">
