--- a/index.html
+++ b/index.html
@@ -61,20 +61,20 @@
                     <h3>Experiencia</h3>
                     <p>fsgdfgdfgdfg</p>
                 </div>
-                <div>
-                    <h3>Dominio de herramientas</h3>
-                    <img src=" ./img/Logos-habilidades/ilustrador.png" alt="Ilustrator">
-                    <img src="./img/Logos-habilidades/photoshop.png" alt="Photoshop">
-                    <img src="./img/Logos-habilidades/indesign.png" alt="Indesigne">
-                    <img src="./img/Logos-habilidades/figma.png" alt="Figma">
-                </div>
+            <div>
+                <h3>Dominio de herramientas</h3>
+                <img src=" ./img/Logos-habilidades/ilustrador.png" alt="Ilustrator">
+                <img src="./img/Logos-habilidades/photoshop.png" alt="Photoshop">
+                <img src="./img/Logos-habilidades/indesign.png" alt="Indesigne">
+                <img src="./img/Logos-habilidades/figma.png" alt="Figma">
             </div>
+        </div>
         </section>
         <section id="mis-proyectos">
             <h2> Mis proyectos</h2>
             <div class="image">
-                <div class="proyectos-img">
-                    <h3>Afiches</h3>
+                <div class="proyectos-muestra">
+                    <h2>Afiches</h2>
                     <a href="https://www.behance.net/gallery/155726021/Afiche-social-Diseno-II" target="_blank">
                         <img src="./img/afichesocial1.jpg" alt="Afiche social" width="250px" height="300px">
                     </a>
