--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <section class="inicio">
             <img class="baner" src="./img/banner.jpg">
             <div>
-                <p>Hola!</p>
+                <h1>Hola!</h1>
             </div>
         </section>
         <section id="sobre-mi">
@@ -38,7 +38,6 @@
                         Esta es mi primera página web, así que ¡bienvenidos! Espero que disfruten del recorrido y los
                         invito a explorar mis proyectos para conocer más sobre mi trabajo. ¡Gracias por visitarme!
                     </p>
-                </article>
             </div>
         </section>
         <section id="datos">
@@ -73,7 +72,7 @@
         <section id="mis-proyectos">
             <h2> Mis proyectos</h2>
             <div class="image">
-                <div class="proyectos-muestra">
+                <div class="proyectos-img">
                     <h2>Afiches</h2>
                     <a href="https://www.behance.net/gallery/155726021/Afiche-social-Diseno-II" target="_blank">
                         <img src="./img/afichesocial1.jpg" alt="Afiche social" width="250px" height="300px">
