--- a/index.html
+++ b/index.html
@@ -26,108 +26,135 @@
             </div>
         </section>
         <section id="sobre-mi">
-            <div class="caja-presentacion">
+            <article class="caja-presentacion">
                 <div>
                     <h2>Sobre <br /> mi</h2>
                     <img src="./img/png/corazon-tit.png">
                 </div>
-                <article>
-                    <p>¡Hola! Soy Natalia Oviedo, aunque me pueden decir Natii, Natu o Nat, como prefieran. Soy de
-                        Acuario, amante de los viajes y de crear cosas lindas. Actualmente, estoy cursando la carrera de
-                        Diseño y Comunicación Visual, comenzando mi cuarto año en la Universidad Nacional de Lanús.
-                        Esta es mi primera página web, así que ¡bienvenidos! Espero que disfruten del recorrido y los
-                        invito a explorar mis proyectos para conocer más sobre mi trabajo. ¡Gracias por visitarme!
-                    </p>
-            </div>
+                <p>¡Hola! Soy Natalia Oviedo, aunque me pueden decir Natii, Natu o Nat, como prefieran. Soy de
+                    Acuario, amante de los viajes y de crear cosas lindas. Actualmente, estoy cursando la carrera de
+                    Diseño y Comunicación Visual, comenzando mi cuarto año en la Universidad Nacional de Lanús.
+                    Esta es mi primera página web, así que ¡bienvenidos! Espero que disfruten del recorrido y los
+                    invito a explorar mis proyectos para conocer más sobre mi trabajo. ¡Gracias por visitarme!
+                </p>
+            </article>
         </section>
         <section id="datos">
             <div class="informacion-personal">
-                <div>
-                    <h3>Educación </h3>
-                    <p>UNLA/ Licenciatura el diseño y comunicacion visual (2020- actualidad)</p>
-                    <p>Curso diseño ux/ui (cursando actualmente)</p>
-                </div>
-                <div>
-                    <h3>Idiomas</h3>
-                    <p>Español: Nativo <br />
-                        Ingles : Nivel básico <br />
-                        Portugués: Nivel medio<br />
-                    </p>
+                <ul>
+                    <h3>Educación</h3>
+                    <li class="negrita">Universidad Nacional de Lanús (UNLA)</li>
+                    <li>Licenciatura en Diseño y Comunicación Visual (2020 - actualidad)</li>
+                    <li class="negrita">Coder House</li>
+                    <li>Curso de Diseño UX/UI (cursando actualmente)</li>
+                </ul>
+                <h3>Idiomas</h3>
+                <div class="idiomas">
+                    <ul>
+                        <li class="negrita">Español:
+                            <ul>
+                                <li>
+                                    Nativo
+                                </li>
+                            </ul>
+                        </li>
+                        <li class="negrita">Ingles
+                            <ul>
+                                <li> Nivel básico</li>
+                            </ul>
+                        </li>
+                        <li class="negrita">Portugués
+                            <ul>
+                                <li> medio</li>
+                            </ul>
+                        </li>
+                    </ul>
                 </div>
             </div>
-            <div class="otros-datos">
-                <div>
+            <div class="informacion-personal">
+                <ul>
                     <h3>Experiencia</h3>
-                    <p>fsgdfgdfgdfg</p>
-                </div>
-            <div>
-                <h3>Dominio de herramientas</h3>
-                <img src=" ./img/Logos-habilidades/ilustrador.png" alt="Ilustrator">
-                <img src="./img/Logos-habilidades/photoshop.png" alt="Photoshop">
-                <img src="./img/Logos-habilidades/indesign.png" alt="Indesigne">
-                <img src="./img/Logos-habilidades/figma.png" alt="Figma">
+                    <li class="negrita">Empresa Claro s.a</li>
+                    <li> Puesto: Backoffice (2019-2024) Atención al cliente: Gestión de consultas y resolución de
+                        problemas de manera eficiente.</li>
+                </ul>
+                <h3>Habilidades</h3>
+                <ul class="logos">
+                    <li><img src=" ./img/Logos-habilidades/ilustrador.png" alt="Ilustrator" width="70px" height="70px">
+                    </li>
+                    <li><img src="./img/Logos-habilidades/photoshop.png" alt="Photoshop" width="70px" height="70px">
+                    </li>
+                    <li><img src="./img/Logos-habilidades/indesign.png" alt="Indesigne" width="70px" height="70px">
+                    </li>
+                    <li><img src="./img/Logos-habilidades/figma.png" alt="Figma" width="70px" height="70px"></li>
+                </ul>
             </div>
-        </div>
         </section>
         <section id="mis-proyectos">
-            <h2> Mis proyectos</h2>
-            <div class="image">
-                <div class="proyectos-img">
+            <div class="carrusel">
+                <article class="catalogo1">
+                    <p> Mis <br /> proyectos</p>
                     <h2>Afiches</h2>
                     <a href="https://www.behance.net/gallery/155726021/Afiche-social-Diseno-II" target="_blank">
-                        <img src="./img/afichesocial1.jpg" alt="Afiche social" width="250px" height="300px">
+                        <img src="./img/imagenes-de-proyectos/afichesocial1.jpg" alt="Afiche social">
                     </a>
                     <a href="https://www.behance.net/gallery/157761159/Afiches-cultural-Iris-Van-Herpen-Diseno-II"
                         target="_blank">
-                        <img src="./img/afichecultural1.jpg" alt="Afiche Culturaal" width="250px" height="300px">
+                        <img src=".//img/imagenes-de-proyectos/afichecultural1.jpg" alt="Afiche Culturaal">
                     </a>
-                </div>
-                <div class="proyectos-img">
+                </article>
+                <article class="catalogo2">
                     <h2>Editorial</h2>
                     <a href="https://www.behance.net/gallery/184190355/Diseno-editorial-Catalogo-de-artista"
                         target="_blank">
-                        <img src="./img/editorial1.jpg" alt="editorial Catálogo de Artista" width="350px"
-                            height="300px">
+                        <img src="./img/imagenes-de-proyectos/editorial1.jpg">
                     </a>
                     <a href="https://www.behance.net/gallery/184314865/Infografia-Mate-elctrico" target="_blank">
-                        <img src="./img/infografia1.jpg" alt="Diseño de información" width="300px" height="300px">
+                        <img src="./img/imagenes-de-proyectos/editorial2.jpg" alt="Diseño de información">
                     </a>
-                </div>
-                <div class="proyectos-img">
-                    <h2>Identidad visual</h2>
+                    <h2>Identidad <br />visual</h2>
                     <a href="https://www.behance.net/gallery/182412071/Rediseno-de-marca-Taller-de-diseno-III-UNLa"
                         target="_blank">
-                        <img src="./img/identidad visual.jpg" alt="Re-diseño de identidad visual" width="300px"
-                            height="250px">
+                        <img src="./img/imagenes-de-proyectos/identidad-visual1.jpg"
+                            alt="Re-diseño de identidad visual">
                     </a>
                     <a href="https://www.behance.net/gallery/191837071/Sistema-y-Diseno-de-latas" target="_blank">
-                        <img src="./img/identidad2.jpg" alt="Identidad Visual" width="400x" height="400px">
+                        <img src="./img/imagenes-de-proyectos/identidad-visual2.jpg" alt="Identidad Visual">
                     </a>
-                </div>
-                <div class="proyectos-img">
-                    <h2>Fotografía</h2>
-                    <a href="https://www.behance.net/gallery/153431609/Composicion-fotografica-en-sistema-UNLA"
-                        target="_blank">
-                        <img src="./img/fotografia1.jpg" alt="Composición" width="300px" height="250px">
-                        <img src="./img/fotografia2.jpg" alt="Composición" width="300px" height="250px">
-                    </a>
-                </div>
+                </article>
             </div>
         </section>
     </main>
-    <footer>
-        <div id="contacto">
-            <h2>Mis Redes</h2>
-            <ul class="botones-redes">
-                <li><a href="https://www.instagram.com/natiioviedo22/" target="_blank">Instagram</a></li>
-                <li><a href="https://www.behance.net/nataliaoviedo3" target="_blank">Mi Behance</a></li>
-                <li><a href="https://www.linkedin.com/in/natalia-oviedo-7906b7275/" target="_blank">Linkedin</a> </li>
-            </ul>
+    <footer id="contacto">
+        <aside class="aside">
+            <a href="https://www.instagram.com/natiioviedo22/" target="_blank">
+                <img class="icon" src="img/logos-habilidades/instagram4.png" alt="instagram">
+            </a>
+            <a href="https://www.behance.net/nataliaoviedo3" target="_blank">
+                <img class="icon" src="img/logos-habilidades/behance2.png" alt="behance">
+            </a>
+        </aside>
+        <div class="despedida">
+            <h2>¡Gracias por ver mi trabajo!</h2>
+            <p>Espero que hayas disfrutado explorando mis proyectos. <br />Si tienes alguna pregunta,estaré feliz de
+                escucharte</p>
         </div>
-        <div class="copy">
-            <h6>Todos los derechos reservados</h6>
-            <h6>Copyright © 2023 Natalia</h6>
+        <div class="mensaje">
+            <h3>Contactame!</h3>
+            <div>
+                <h4>Linkedin</h4>
+                <a href="https://www.linkedin.com/in/natalia-oviedo-7906b7275/" target="_blank">
+                    <img class="icon" src="img/logos-habilidades/linkedin.png" alt="instagram">
+                </a>
+            </div>
+            <div>
+                <h4>natiioviedo92@gmail.com</h4>
+                <img src="./img/logos-habilidades/gmail.png">
+            </div>
         </div>
+            <div class="copy">
+                <h6>Todos los derechos reservados / Copyright © 2023 Natalia</h6>
+            </div>
     </footer>
 </body>
 
