--- a/index.html
+++ b/index.html
@@ -136,8 +136,7 @@
         </aside>
         <div class="despedida">
             <h2>¡Gracias por ver mi trabajo!</h2>
-            <p>Espero que hayas disfrutado explorando mis proyectos. <br />Si tienes alguna pregunta,estaré feliz de
-                escucharte</p>
+            <p>Espero que hayas disfrutado explorando mis proyectos. <br /> No dudes en contactarme para poder crear juntos!</p>
         </div>
         <div class="mensaje">
             <h3>Contactame!</h3>
