--- a/index.html
+++ b/index.html
@@ -75,18 +75,15 @@
                 <ul>
                     <h3>Experiencia</h3>
                     <li class="negrita">Empresa Claro s.a</li>
-                    <li> Puesto: Backoffice (2019-2024) Atención al cliente: Gestión de consultas y resolución de
+                    <li> Puesto: Backoffice (2019-2024) Atención al cliente. Gestión de consultas y resolución de
                         problemas de manera eficiente.</li>
                 </ul>
                 <h3>Habilidades</h3>
                 <ul class="logos">
-                    <li><img src=" ./img/Logos-habilidades/ilustrador.png" alt="Ilustrator" width="70px" height="70px">
-                    </li>
-                    <li><img src="./img/Logos-habilidades/photoshop.png" alt="Photoshop" width="70px" height="70px">
-                    </li>
-                    <li><img src="./img/Logos-habilidades/indesign.png" alt="Indesigne" width="70px" height="70px">
-                    </li>
-                    <li><img src="./img/Logos-habilidades/figma.png" alt="Figma" width="70px" height="70px"></li>
+                    <li><img src="./img/logos-habilidades/ilustrador.png" alt="Ilustrator"></li>
+                    <li><img src="./img/logos-habilidades/photoshop.png" alt="Photoshop"></li>
+                    <li><img src="./img/logos-habilidades/indesign.png" alt="Indesigne"></li>
+                    <li><img src="./img/logos-habilidades/figma.png" alt="Figma"></li>
                 </ul>
             </div>
         </section>
@@ -136,7 +133,8 @@
         </aside>
         <div class="despedida">
             <h2>¡Gracias por ver mi trabajo!</h2>
-            <p>Espero que hayas disfrutado explorando mis proyectos. <br /> No dudes en contactarme para poder crear juntos!</p>
+            <p>Espero que hayas disfrutado explorando mis proyectos. <br /> No dudes en contactarme para poder crear
+                juntos!</p>
         </div>
         <div class="mensaje">
             <h3>Contactame!</h3>
@@ -151,9 +149,9 @@
                 <img src="./img/logos-habilidades/gmail.png">
             </div>
         </div>
-            <div class="copy">
-                <h6>Todos los derechos reservados / Copyright © 2023 Natalia</h6>
-            </div>
+        <div class="copy">
+            <h6>Todos los derechos reservados / Copyright © 2023 Natalia</h6>
+        </div>
     </footer>
 </body>
 
