--- a/index.html
+++ b/index.html
@@ -138,15 +138,17 @@
         </div>
         <div class="mensaje">
             <h3>Contactame!</h3>
-            <div>
-                <h4>Linkedin</h4>
+            <div class="mje">
                 <a href="https://www.linkedin.com/in/natalia-oviedo-7906b7275/" target="_blank">
                     <img class="icon" src="img/logos-habilidades/linkedin.png" alt="instagram">
                 </a>
+                <h4>Linkedin</h4>
             </div>
-            <div>
-                <h4>natiioviedo92@gmail.com</h4>
+            <div class="mje">
+                <a href="mailto:natiioviedo92@gmail.com?subject=Hola%20Natalia&body=Hola%20Natalia,%0AVi%20tu%20trabajo%20y%20me%20gustaría%20saber%20más.%0A¡Hablemos!">
                 <img src="./img/logos-habilidades/gmail.png">
+                </a>
+                <h4>natiioviedo92@gmail.com</h4>
             </div>
         </div>
         <div class="copy">
