--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         </aside>
         <div class="despedida">
             <h2>¡Gracias por ver mi trabajo!</h2>
-            <p>Espero que hayas disfrutado explorando mis proyectos. <br /> No dudes en contactarme para poder crear
+            <p>Espero que hayas disfrutado explorando mis proyectos. <br /> ¡No dudes en contactarme para poder crear
                 juntos!</p>
         </div>
         <div class="mensaje">
