--- a/index.html
+++ b/index.html
@@ -20,8 +20,12 @@
     </header>
     <main>
         <section class="inicio">
-            <img class="baner" src="./img/banner.jpg">
-            <div>
+            <div class="baner.img" >
+                <img class="baner" src="./img/baner-02.jpg" alt="Chica sentada">
+                <img class="brillo" src="./img/SVG/brillo.svg" width="60px" height="60px">
+                <img class="brillo2" src="./img/SVG/brillo.svg" width="60px" height="60px">
+            </div>
+        <div>
                 <h1>Hola!</h1>
             </div>
         </section>
