--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
             <article class="caja-presentacion">
                 <div>
                     <h2>Sobre <br /> mi</h2>
-                    <img src="./img/png/corazon-tit.png">
+                    <img src="./img/SVG/corazon.svg">
                 </div>
                 <p>¡Hola! Soy Natalia Oviedo, aunque me pueden decir Natii, Natu o Nat, como prefieran. Soy de
                     Acuario, amante de los viajes y de crear cosas lindas. Actualmente, estoy cursando la carrera de
                     Diseño y Comunicación Visual, comenzando mi cuarto año en la Universidad Nacional de Lanús.
                     Esta es mi primera página web, así que ¡bienvenidos! Espero que disfruten del recorrido y los
-                    invito a explorar mis proyectos para conocer más sobre mi trabajo. ¡Gracias por visitarme!
+                    invito a explorar mis proyectos para conocer más sobre mi trabajo. ¡Gracias por darme de tu tiempo!
                 </p>
             </article>
         </section>
@@ -136,8 +136,8 @@
             </a>
         </aside>
         <div class="despedida">
-            <h2>¡Gracias por ver mi trabajo!</h2>
-            <p>Espero que hayas disfrutado explorando mis proyectos. <br /> ¡No dudes en contactarme para poder crear
+            <h2>¡Gracias por visitarme!</h2>
+            <p>Espero que hayas disfrutado explorando mis proyectos.¡No dudes en contactarme para poder crear
                 juntos!</p>
         </div>
         <div class="mensaje">
@@ -156,7 +156,7 @@
             </div>
         </div>
         <div class="copy">
-            <h6>Todos los derechos reservados / Copyright © 2023 Natalia</h6>
+            <h6>Todos los derechos reservados / Copyright © 2023 Natalia Oviedo</h6>
         </div>
     </footer>
 </body>
