--- a/index.html
+++ b/index.html
@@ -141,8 +141,11 @@
                 juntos!</p>
         </div>
         <div class="mensaje">
+            <div>
             <h3>Contactame!</h3>
+            <img src="./img/SVG/luna.svg" alt="luna"  width="60px" height="60px">
             <div class="mje">
+            </div>
                 <a href="https://www.linkedin.com/in/natalia-oviedo-7906b7275/" target="_blank">
                     <img class="icon" src="img/logos-habilidades/linkedin.png" alt="instagram">
                 </a>
