--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <nav>
-            <ul class="botones">
+            <ul id="botones">
                 <li><a href="#sobre-mi"> Sobre mi</a></li>
                 <li><a href="#mis-proyectos"> Mis proyectos</a></li>
                 <li><a href="#contacto">Contacto</a></li>
@@ -20,12 +20,12 @@
     </header>
     <main>
         <section class="inicio">
-            <div class="baner.img" >
+            <div class="baner.img">
                 <img class="baner" src="./img/baner-02.jpg" alt="Chica sentada">
                 <img class="brillo" src="./img/SVG/brillo.svg" width="60px" height="60px">
                 <img class="brillo2" src="./img/SVG/brillo.svg" width="60px" height="60px">
             </div>
-        <div>
+            <div>
                 <h1>Hola!</h1>
             </div>
         </section>
@@ -44,10 +44,13 @@
             </article>
         </section>
         <section id="datos">
+                        <a href="#sobre-mi" class="volver-arriba">
+                <img class="volver-arriba" src="./img/button.png" alt="Volver arriba">
+            </a>
             <div class="informacion-personal">
                 <ul>
                     <h3>Educación</h3>
-                    <li class="negrita">Universidad Nacional de Lanús (UNLA)</li>
+                    <li class="negrita">Universidad Nacional de Lanús (UNLa)</li>
                     <li>Licenciatura en Diseño y Comunicación Visual (2020 - actualidad)</li>
                     <li class="negrita">Coder House</li>
                     <li>Curso de Diseño UX/UI (cursando actualmente)</li>
@@ -69,7 +72,7 @@
                         </li>
                         <li class="negrita">Portugués
                             <ul>
-                                <li> medio</li>
+                                <li> Nivel medio</li>
                             </ul>
                         </li>
                     </ul>
@@ -97,32 +100,35 @@
                     <p> Mis <br /> proyectos</p>
                     <h2>Afiches</h2>
                     <a href="https://www.behance.net/gallery/155726021/Afiche-social-Diseno-II" target="_blank">
-                        <img src="./img/imagenes-de-proyectos/afichesocial1.jpg" alt="Afiche social">
+                        <img class="fotos" src="./img/imagenes-de-proyectos/afichesocial1.jpg" alt="Afiche social">
                     </a>
                     <a href="https://www.behance.net/gallery/157761159/Afiches-cultural-Iris-Van-Herpen-Diseno-II"
                         target="_blank">
-                        <img src=".//img/imagenes-de-proyectos/afichecultural1.jpg" alt="Afiche Culturaal">
+                        <img class="fotos" src=".//img/imagenes-de-proyectos/afichecultural1.jpg" alt="Afiche Culturaal">
                     </a>
                 </article>
                 <article class="catalogo2">
                     <h2>Editorial</h2>
                     <a href="https://www.behance.net/gallery/184190355/Diseno-editorial-Catalogo-de-artista"
                         target="_blank">
-                        <img src="./img/imagenes-de-proyectos/editorial1.jpg">
+                        <img class="fotos" src="./img/imagenes-de-proyectos/editorial1.jpg">
                     </a>
                     <a href="https://www.behance.net/gallery/184314865/Infografia-Mate-elctrico" target="_blank">
-                        <img src="./img/imagenes-de-proyectos/editorial2.jpg" alt="Diseño de información">
+                        <img class="fotos" src="./img/imagenes-de-proyectos/editorial2.jpg" alt="Diseño de información">
                     </a>
                     <h2>Identidad <br />visual</h2>
                     <a href="https://www.behance.net/gallery/182412071/Rediseno-de-marca-Taller-de-diseno-III-UNLa"
                         target="_blank">
-                        <img src="./img/imagenes-de-proyectos/identidad-visual1.jpg"
+                        <img class="fotos" src="./img/imagenes-de-proyectos/identidad-visual1.jpg"
                             alt="Re-diseño de identidad visual">
                     </a>
                     <a href="https://www.behance.net/gallery/191837071/Sistema-y-Diseno-de-latas" target="_blank">
-                        <img src="./img/imagenes-de-proyectos/identidad-visual2.jpg" alt="Identidad Visual">
+                        <img class="fotos" src="./img/imagenes-de-proyectos/identidad-visual2.jpg" alt="Identidad Visual">
                     </a>
                 </article>
+                <a href="#botones" class="volver-arriba">
+                    <img class="volver-arriba" src="./img/button.png" alt="Volver arriba">
+                </a>
             </div>
         </section>
     </main>
@@ -149,8 +155,9 @@
                 <h4>Linkedin</h4>
             </div>
             <div class="mje">
-                <a href="mailto:natiioviedo92@gmail.com?subject=Hola%20Natalia&body=Hola%20Natalia,%0AVi%20tu%20trabajo%20y%20me%20gustaría%20saber%20más.%0A¡Hablemos!">
-                <img src="./img/logos-habilidades/gmail.png">
+                <a
+                    href="mailto:natiioviedo92@gmail.com?subject=Hola%20Natalia&body=Hola%20Natalia,%0AVi%20tu%20trabajo%20y%20me%20gustaría%20saber%20más.%0A¡Hablemos!">
+                    <img src="./img/logos-habilidades/gmail.png">
                 </a>
                 <h4>natiioviedo92@gmail.com</h4>
             </div>
