--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <title>/ Natalia oviedo </title>
     <link href="style.css" rel="stylesheet" type="text/css">
-    <link rel="icon" href="img/SVG/corazon.ico" type="image/x-icon">
+    <link rel="icon" href="img/png-svg-ico/corazon.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -21,9 +21,9 @@
     <main>
         <section class="inicio">
             <div class="baner.img">
-                <img class="baner" src="./img/baner-02.jpg" alt="Chica sentada">
-                <img class="brillo" src="./img/SVG/brillo.svg" width="60px" height="60px">
-                <img class="brillo2" src="./img/SVG/brillo.svg" width="60px" height="60px">
+                <img class="baner" src="./img/baner/baner-02.jpg" alt="Chica sentada">
+                <img class="brillo" src="./img/iconos/brillo.svg" width="60px" height="60px">
+                <img class="brillo2" src="./img/iconos/brillo.svg" width="60px" height="60px">
             </div>
             <div>
                 <h1>Hola!</h1>
@@ -33,7 +33,7 @@
             <article class="caja-presentacion">
                 <div>
                     <h2>Sobre <br /> mi</h2>
-                    <img src="./img/SVG/corazon.svg">
+                    <img src="./img/iconos/corazon.svg">
                 </div>
                 <p>¡Hola! Soy Natalia Oviedo, aunque me pueden decir Natii, Natu o Nat, como prefieran. Soy de
                     Acuario, amante de los viajes y de crear cosas lindas. Actualmente, estoy cursando la carrera de
@@ -44,9 +44,6 @@
             </article>
         </section>
         <section id="datos">
-                        <a href="#sobre-mi" class="volver-arriba">
-                <img class="volver-arriba" src="./img/button.png" alt="Volver arriba">
-            </a>
             <div class="informacion-personal">
                 <ul>
                     <h3>Educación</h3>
@@ -87,7 +84,7 @@
                 </ul>
                 <h3>Habilidades</h3>
                 <ul class="logos">
-                    <li><img src="./img/logos-habilidades/ilustrador.png" alt="Ilustrator"></li>
+                    <li><img src="./img/logos/ilustrador.png" alt="Ilustrator"></li>
                     <li><img src="./img/logos-habilidades/photoshop.png" alt="Photoshop"></li>
                     <li><img src="./img/logos-habilidades/indesign.png" alt="Indesigne"></li>
                     <li><img src="./img/logos-habilidades/figma.png" alt="Figma"></li>
@@ -104,7 +101,8 @@
                     </a>
                     <a href="https://www.behance.net/gallery/157761159/Afiches-cultural-Iris-Van-Herpen-Diseno-II"
                         target="_blank">
-                        <img class="fotos" src=".//img/imagenes-de-proyectos/afichecultural1.jpg" alt="Afiche Culturaal">
+                        <img class="fotos" src=".//img/imagenes-de-proyectos/afichecultural1.jpg"
+                            alt="Afiche Culturaal">
                     </a>
                 </article>
                 <article class="catalogo2">
@@ -123,24 +121,25 @@
                             alt="Re-diseño de identidad visual">
                     </a>
                     <a href="https://www.behance.net/gallery/191837071/Sistema-y-Diseno-de-latas" target="_blank">
-                        <img class="fotos" src="./img/imagenes-de-proyectos/identidad-visual2.jpg" alt="Identidad Visual">
+                        <img class="fotos" src="./img/imagenes-de-proyectos/identidad-visual2.jpg"
+                            alt="Identidad Visual">
                     </a>
                 </article>
                 <a href="#botones" class="volver-arriba">
-                    <img class="volver-arriba" src="./img/button.png" alt="Volver arriba">
+                    <img class="volver-arriba" src="./img/iconos/button.png" alt="volver-arriba">
                 </a>
             </div>
         </section>
     </main>
     <footer id="contacto">
-        <aside class="aside">
+        <div class="redes">
             <a href="https://www.instagram.com/natiioviedo22/" target="_blank">
-                <img class="icon" src="img/logos-habilidades/instagram4.png" alt="instagram">
+                <img class="icon" src="img/logos/instagram4.png" alt="instagram">
             </a>
             <a href="https://www.behance.net/nataliaoviedo3" target="_blank">
-                <img class="icon" src="img/logos-habilidades/behance2.png" alt="behance">
+                <img class="icon" src="img/logos/behance2.png" alt="behance">
             </a>
-        </aside>
+        </div>
         <div class="despedida">
             <h2>¡Gracias por visitarme!</h2>
             <p>Espero que hayas disfrutado explorando mis proyectos.¡No dudes en contactarme para poder crear
@@ -150,14 +149,14 @@
             <h3>Contactame!</h3>
             <div class="mje">
                 <a href="https://www.linkedin.com/in/natalia-oviedo-7906b7275/" target="_blank">
-                    <img class="icon" src="img/logos-habilidades/linkedin.png" alt="instagram">
+                    <img class="icon" src="img/logos/linkedin.png" alt="instagram">
                 </a>
                 <h4>Linkedin</h4>
             </div>
             <div class="mje">
                 <a
                     href="mailto:natiioviedo92@gmail.com?subject=Hola%20Natalia&body=Hola%20Natalia,%0AVi%20tu%20trabajo%20y%20me%20gustaría%20saber%20más.%0A¡Hablemos!">
-                    <img src="./img/logos-habilidades/gmail.png">
+                    <img src="./img/logos/gmail.png">
                 </a>
                 <h4>natiioviedo92@gmail.com</h4>
             </div>
