--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@
                 </ul>
                 <h3>Habilidades</h3>
                 <ul class="logos">
-                    <li><img src="./img/logos/ilustrador.png" alt="Ilustrator"></li>
-                    <li><img src="./img/logos-habilidades/photoshop.png" alt="Photoshop"></li>
-                    <li><img src="./img/logos-habilidades/indesign.png" alt="Indesigne"></li>
-                    <li><img src="./img/logos-habilidades/figma.png" alt="Figma"></li>
+                    <li><img src="./img/logos/ilustrador.png" alt=" Logo Ilustrator"></li>
+                    <li><img src="./img/logos/photoshop.png" alt=" Logo Photoshop"></li>
+                    <li><img src="./img/logos/indesign.png" alt=" Logo Indesigne"></li>
+                    <li><img src="./img/logos/figma.png" alt="Logo Figma"></li>
                 </ul>
             </div>
         </section>
@@ -162,7 +162,7 @@
             </div>
         </div>
         <div class="copy">
-            <h6>Todos los derechos reservados / Copyright © 2023 Natalia Oviedo</h6>
+            <h6>Todos los derechos reservados / Copyright © 2024 Natalia Oviedo</h6>
         </div>
     </footer>
 </body>
