--- a/index.html
+++ b/index.html
@@ -5,35 +5,31 @@
     <meta charset="utf-8" />
     <title>/ Natalia oviedo </title>
     <link href="style.css" rel="stylesheet" type="text/css">
-    <link rel="icon" href="img/png-svg-ico/corazon.ico" type="image/x-icon">
+    <link rel="icon" href="img/iconos/corazon.ico" type="image/x-icon">
 </head>
 
 <body>
     <header>
-        <nav>
-            <ul id="botones">
-                <li><a href="#sobre-mi"> Sobre mi</a></li>
-                <li><a href="#mis-proyectos"> Mis proyectos</a></li>
-                <li><a href="#contacto">Contacto</a></li>
-            </ul>
+        <nav id="botones">
+            <a href="#sobre-mi"> Sobre mi</a>
+            <a href="#mis-proyectos"> Mis proyectos</a>
+            <a href="#contacto">Contacto</a>
         </nav>
     </header>
     <main>
         <section class="inicio">
             <div class="baner.img">
-                <img class="baner" src="./img/baner/baner-02.jpg" alt="Chica sentada">
-                <img class="brillo" src="./img/iconos/brillo.svg" width="60px" height="60px">
-                <img class="brillo2" src="./img/iconos/brillo.svg" width="60px" height="60px">
+                <img class="baner" src="./img/baner/baner-02.jpg" alt="Chica sentada" width="1920px" height="600px">
+                <img class="brillo" src="./img/iconos/brillo.svg" alt="animacion brillo" width="60px" height="60px">
+                <img class="brillo2" src="./img/iconos/brillo.svg" alt="animacion brillo" width="60px" height="60px">
             </div>
-            <div>
-                <h1>Hola!</h1>
-            </div>
+            <h1>Hola!</h1>
         </section>
         <section id="sobre-mi">
             <article class="caja-presentacion">
                 <div>
                     <h2>Sobre <br /> mi</h2>
-                    <img src="./img/iconos/corazon.svg">
+                    <img src="./img/iconos/corazon.svg" alt="animacion corazón" width="60px" height="52px">
                 </div>
                 <p>¡Hola! Soy Natalia Oviedo, aunque me pueden decir Natii, Natu o Nat, como prefieran. Soy de
                     Acuario, amante de los viajes y de crear cosas lindas. Actualmente, estoy cursando la carrera de
@@ -45,8 +41,8 @@
         </section>
         <section id="datos">
             <div class="informacion-personal">
+                <h3>Educación</h3>
                 <ul>
-                    <h3>Educación</h3>
                     <li class="negrita">Universidad Nacional de Lanús (UNLa)</li>
                     <li>Licenciatura en Diseño y Comunicación Visual (2020 - actualidad)</li>
                     <li class="negrita">Coder House</li>
@@ -55,39 +51,28 @@
                 <h3>Idiomas</h3>
                 <div class="idiomas">
                     <ul>
-                        <li class="negrita">Español:
-                            <ul>
-                                <li>
-                                    Nativo
-                                </li>
-                            </ul>
-                        </li>
-                        <li class="negrita">Ingles
-                            <ul>
-                                <li> Nivel básico</li>
-                            </ul>
-                        </li>
-                        <li class="negrita">Portugués
-                            <ul>
-                                <li> Nivel medio</li>
-                            </ul>
-                        </li>
+                        <li class="negrita">Español </li>
+                        <li>Nativo</li>
+                        <li class="negrita">Ingles </li>
+                        <li> Nivel básico</li>
+                        <li class="negrita">Portugués </li>
+                        <li> Nivel medio</li>
                     </ul>
                 </div>
             </div>
             <div class="informacion-personal">
+                <h3>Experiencia</h3>
                 <ul>
-                    <h3>Experiencia</h3>
                     <li class="negrita">Empresa Claro s.a</li>
                     <li> Puesto: Backoffice (2019-2024) Atención al cliente. Gestión de consultas y resolución de
                         problemas de manera eficiente.</li>
                 </ul>
                 <h3>Habilidades</h3>
                 <ul class="logos">
-                    <li><img src="./img/logos/ilustrador.png" alt=" Logo Ilustrator"></li>
-                    <li><img src="./img/logos/photoshop.png" alt=" Logo Photoshop"></li>
-                    <li><img src="./img/logos/indesign.png" alt=" Logo Indesigne"></li>
-                    <li><img src="./img/logos/figma.png" alt="Logo Figma"></li>
+                    <li><img src="./img/logos/ilustrador.png" alt=" Logo Ilustrator" width="60px" height="60px"></li>
+                    <li><img src="./img/logos/photoshop.png" alt=" Logo Photoshop" width="60px" height="60px"></li>
+                    <li><img src="./img/logos/indesign.png" alt=" Logo Indesigne" width="60px" height="60px"></li>
+                    <li><img src="./img/logos/figma.png" alt="Logo Figma" width="60px" height="60px"></li>
                 </ul>
             </div>
         </section>
@@ -97,32 +82,35 @@
                     <p> Mis <br /> proyectos</p>
                     <h2>Afiches</h2>
                     <a href="https://www.behance.net/gallery/155726021/Afiche-social-Diseno-II" target="_blank">
-                        <img class="fotos" src="./img/imagenes-de-proyectos/afichesocial1.jpg" alt="Afiche social">
+                        <img class="fotos" src="./img/imagenes-de-proyectos/afichesocial1.jpg" alt="Afiche social"
+                            width="200px" height="280px">
                     </a>
                     <a href="https://www.behance.net/gallery/157761159/Afiches-cultural-Iris-Van-Herpen-Diseno-II"
                         target="_blank">
-                        <img class="fotos" src=".//img/imagenes-de-proyectos/afichecultural1.jpg"
-                            alt="Afiche Culturaal">
+                        <img class="fotos" src=".//img/imagenes-de-proyectos/afichecultural1.jpg" alt="Afiche Cultural"
+                            width="200px" height="280px">
                     </a>
                 </article>
                 <article class="catalogo2">
                     <h2>Editorial</h2>
                     <a href="https://www.behance.net/gallery/184190355/Diseno-editorial-Catalogo-de-artista"
                         target="_blank">
-                        <img class="fotos" src="./img/imagenes-de-proyectos/editorial1.jpg">
+                        <img class="fotos" src="./img/imagenes-de-proyectos/editorial1.jpg" width="200px"
+                            height="280px">
                     </a>
                     <a href="https://www.behance.net/gallery/184314865/Infografia-Mate-elctrico" target="_blank">
-                        <img class="fotos" src="./img/imagenes-de-proyectos/editorial2.jpg" alt="Diseño de información">
+                        <img class="fotos" src="./img/imagenes-de-proyectos/editorial2.jpg" alt="Diseño de información"
+                            width="200px" height="280px">
                     </a>
                     <h2>Identidad <br />visual</h2>
                     <a href="https://www.behance.net/gallery/182412071/Rediseno-de-marca-Taller-de-diseno-III-UNLa"
                         target="_blank">
                         <img class="fotos" src="./img/imagenes-de-proyectos/identidad-visual1.jpg"
-                            alt="Re-diseño de identidad visual">
+                            alt="Re-diseño de identidad visual" width="200px" height="280px">
                     </a>
                     <a href="https://www.behance.net/gallery/191837071/Sistema-y-Diseno-de-latas" target="_blank">
                         <img class="fotos" src="./img/imagenes-de-proyectos/identidad-visual2.jpg"
-                            alt="Identidad Visual">
+                            alt="Identidad Visual" width="200px" height="280px">
                     </a>
                 </article>
                 <a href="#botones" class="volver-arriba">
@@ -134,37 +122,29 @@
     <footer id="contacto">
         <div class="redes">
             <a href="https://www.instagram.com/natiioviedo22/" target="_blank">
-                <img class="icon" src="img/logos/instagram4.png" alt="instagram">
+                <img class="icon" src="img/logos/instagram4.png" alt="Logo instagram" width="40px" height="40px">
             </a>
             <a href="https://www.behance.net/nataliaoviedo3" target="_blank">
-                <img class="icon" src="img/logos/behance2.png" alt="behance">
+                <img class="icon" src="img/logos/behance2.png" alt="behance" width="40px" height="40px">
             </a>
         </div>
-        <div class="despedida">
-            <h2>¡Gracias por visitarme!</h2>
-            <p>Espero que hayas disfrutado explorando mis proyectos.¡No dudes en contactarme para poder crear
-                juntos!</p>
-        </div>
+        <h3>Contactame!</h3>
         <div class="mensaje">
-            <h3>Contactame!</h3>
             <div class="mje">
                 <a href="https://www.linkedin.com/in/natalia-oviedo-7906b7275/" target="_blank">
-                    <img class="icon" src="img/logos/linkedin.png" alt="instagram">
+                    <img class="icon" src="img/logos/linkedin.png" alt="instagram" width="50px" height="50px">
                 </a>
                 <h4>Linkedin</h4>
             </div>
             <div class="mje">
                 <a
                     href="mailto:natiioviedo92@gmail.com?subject=Hola%20Natalia&body=Hola%20Natalia,%0AVi%20tu%20trabajo%20y%20me%20gustaría%20saber%20más.%0A¡Hablemos!">
-                    <img src="./img/logos/gmail.png">
+                    <img src="./img/logos/gmail.png" width="50px" height="50px">
                 </a>
                 <h4>natiioviedo92@gmail.com</h4>
             </div>
         </div>
-        <div class="copy">
-            <h6>Todos los derechos reservados / Copyright © 2024 Natalia Oviedo</h6>
-        </div>
+        <h6 class="copy"> Copyright © 2024 Natalia Oviedo</h6>
     </footer>
 </body>
-
 </html>
