--- a/index.html
+++ b/index.html
@@ -10,20 +10,34 @@
 
 <body>
     <header>
-        <nav id="botones">
-            <a href="#sobre-mi"> Sobre mi</a>
-            <a href="#mis-proyectos"> Mis proyectos</a>
-            <a href="#contacto">Contacto</a>
+        <nav id="botonera">
+            <div class="logo">
+                <img src="./img/iconos/corazon.svg" alt="animacion corazón" width="60px" height="52px">
+            </div>
+            <div class="botones">
+                <a href="#sobre-mi">Sobre mi</a>
+                <a href="#mis-proyectos">Mis proyectos</a>
+                <a href="#contacto">Contacto</a>
+            </div>
         </nav>
     </header>
     <main>
         <section class="inicio">
             <div class="baner.img">
-                <img class="baner" src="./img/baner/baner-02.jpg" alt="Chica sentada" width="1920px" height="600px">
+                <img class="baner" src="./img/cv-02.jpg" alt="Chica sentada" width="1920px" height="550px">
                 <img class="brillo" src="./img/iconos/brillo.svg" alt="animacion brillo" width="60px" height="60px">
                 <img class="brillo2" src="./img/iconos/brillo.svg" alt="animacion brillo" width="60px" height="60px">
             </div>
-            <h1>Hola!</h1>
+            <div class="saludo">
+                <div>
+                    <h1>Hola</h1>
+                    <h1>!*</h1>
+                </div>
+                <div class="saludo2">
+                    <h2> Soy Natalia Oviedo</h2>
+                    <h2> Soy* Diseñadora Gráfica</h2>
+                </div>
+            </div>
         </section>
         <section id="sobre-mi">
             <article class="caja-presentacion">
@@ -78,7 +92,7 @@
         </section>
         <section id="mis-proyectos">
             <div class="carrusel">
-                <article class="catalogo1">
+                <div class="catalogo1">
                     <p> Mis <br /> proyectos</p>
                     <h2>Afiches</h2>
                     <a href="https://www.behance.net/gallery/155726021/Afiche-social-Diseno-II" target="_blank">
@@ -90,8 +104,8 @@
                         <img class="fotos" src=".//img/imagenes-de-proyectos/afichecultural1.jpg" alt="Afiche Cultural"
                             width="200px" height="280px">
                     </a>
-                </article>
-                <article class="catalogo2">
+                </div>
+                <div class="catalogo2">
                     <h2>Editorial</h2>
                     <a href="https://www.behance.net/gallery/184190355/Diseno-editorial-Catalogo-de-artista"
                         target="_blank">
@@ -112,7 +126,7 @@
                         <img class="fotos" src="./img/imagenes-de-proyectos/identidad-visual2.jpg"
                             alt="Identidad Visual" width="200px" height="280px">
                     </a>
-                </article>
+                </div>
                 <a href="#botones" class="volver-arriba">
                     <img class="volver-arriba" src="./img/iconos/button.png" alt="volver-arriba">
                 </a>
@@ -147,4 +161,5 @@
         <h6 class="copy"> Copyright © 2024 Natalia Oviedo</h6>
     </footer>
 </body>
+
 </html>
